// Copyright lowRISC contributors (OpenTitan project).
// Licensed under the Apache License, Version 2.0, see LICENSE for details.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package ot;

option go_package = "registry_record_go_pb";

// OpenTitan Registry Record sent to a registry service.
//
// This will get sent to one (or many) registry service(s).
message RegistryRecord {
  // Device ID encoded as a hex string.
  string device_id = 1;
  // SKU identifier encoded as a string.
  string sku = 2;
  // Verion number indicating version of device data field below.
  uint32 version = 3;
  // Device data encoded as a variable length bytes payload.
  bytes data = 4;
  // ASN.1 DER encoded authority public key that matches the private key used to
  // generate the endorsement signature below.
  bytes auth_pubkey = 5;
  // ASN.1 DER encoded ECDSA signature over the entire DeviceData payload.
  bytes auth_signature = 6;
}
